# Symmetric_Mtree

./: .gitignore  CMakeLists.txt  LICENSE  queries.txt  readme.md
include/: SymmetricM.hpp
src/: SymmetricM.cpp  main.cpp
